# openskill.py

./: .all-contributorsrc  .bumpversion.cfg  .bumpversion.toml  .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  build_cfast.py  crowdin.yml  fast_rating_readme.md  pyproject.toml  setup.cfg  setup.py  tox.ini  transifex.yml  transifix.yml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  bug_report.md  feature-request.yaml  feature_request.md
.github/workflows/: draft-pdf.yml  localization.yml  main.yml  release.yml
benchmark/: README.md  batch_benchmark.py  benchmark.py  compare_benchmark.py  draw.ipynb  draw_benchmark.py  rank.ipynb  rank_benchmark.py  speed_test.py  split_benchmark.py  win.ipynb  win_benchmark.py
benchmark/data/: chess.csv  overwatch.jsonl  pubg.7z
benchmark/processors/: __init__.py  draw.py  large.py  rank.py  win.py
changes/: +benchmarks.feature.rst  +ladder-docs.doc.rst  +type-fixes.bugfix.rst  105.doc.rst  106.bugfix.rst  108.feature.rst  109.bugfix.rst  124.bugfix.rst  132.bugfix.rst  138.breaking.rst  138.feature.rst  141.bugfix.rst  148.bugfix.rst  152.bugfix.rst  161.bugfix.rst  161.feature.rst  163.feature.rst  165.feature.rst  166.bugfix.rst  174.bugfix.rst  176.bugfix.rst  191.bugfix.rst  192.feature.rst  37.feature.rst  45.feature.rst  46.breaking.rst  46.feature.rst  48.feature.rst  50.feature.rst  52.feature.rst  54.bugfix.rst  56.feature.rst  60.bugfix.rst  61.breaking.rst  73.doc.rst  74.feature.rst  80.doc.rst  80.feature.rst  82.feature.rst
ci/: openblas_support.py
docs/: advanced.rst  conf.py  contributing.rst  doc_requires.txt  index.rst  installation.rst  manual.rst  requirements.txt  time_decay.py
docs/_build/gettext/: advanced.pot  contributing.pot  contributors.pot  index.pot  installation.pot  license.pot  manual.pot
docs/_build/gettext/.doctrees/: advanced.doctree  contributing.doctree  contributors.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  manual.doctree
docs/_build/gettext/api/: modules.pot  openskill.models.pot  openskill.pot
docs/api/: modules.rst  openskill.models.rst  openskill.rst
docs/locale/af_ZA/LC_MESSAGES/: advanced.po  contributing.po  contributors.po  index.po  installation.po  license.po  manual.po
docs/locale/ar_SA/LC_MESSAGES/: advanced.po  contributing.po  contributors.po  index.po  installation.po  license.po  manual.po
docs/locale/ca_ES/LC_MESSAGES/: advanced.po  contributing.po  contributors.po  index.po  installation.po  license.po  manual.po
docs/locale/cs_CZ/LC_MESSAGES/: advanced.po  contributing.po  contributors.po  index.po  installation.po  license.po  manual.po
docs/locale/da_DK/LC_MESSAGES/: advanced.po  contributing.po  contributors.po  index.po  installation.po  license.po  manual.po
docs/locale/de_DE/LC_MESSAGES/: advanced.po  contributing.po  contributors.po  index.po  installation.po  license.po  manual.po
docs/locale/el_GR/LC_MESSAGES/: advanced.po  contributing.po  contributors.po  index.po  installation.po  license.po  manual.po
docs/locale/en_US/LC_MESSAGES/: advanced.po  contributing.po  contributors.po  index.po  installation.po  license.po  manual.po
docs/locale/es_ES/LC_MESSAGES/: advanced.po  contributing.po  contributors.po  index.po  installation.po  license.po  manual.po
docs/source/: bulk_rating.rst  citation.rst  conf.py  contributing.rst  contributors.rst  faq.rst  index.rst  installation.rst  internals.rst  license.rst  manual.rst  ordinal.ipynb  references.bib
docs/source/_static/: custom.css  custom.js
docs/source/_templates/: base.html  search.html
docs/source/api/: openskill.models.common.rst  openskill.models.weng_lin.bradley_terry_full.rst  openskill.models.weng_lin.bradley_terry_part.rst  openskill.models.weng_lin.common.rst  openskill.models.weng_lin.plackett_luce.rst  openskill.models.weng_lin.rst  openskill.models.weng_lin.thurstone_mosteller_full.rst  openskill.models.weng_lin.thurstone_mosteller_part.rst
openskill/: __init__.py  _cfast.pyx  batch.py  constants.py  ladder.py  ordinal.py  predict.py  rate.py  rating.py  statistics.py  util.py
openskill/models/: __init__.py  bradley_terry_full.py  bradley_terry_part.py  common.py  plackett_luce.py  thurston_mosteller_full.py  thurston_mosteller_part.py  thurstone_mosteller_full.py  thurstone_mosteller_part.py
openskill/models/weng_lin/: __init__.py  bradley_terry_full.py  bradley_terry_part.py  common.py  plackett_luce.py  thurstone_mosteller_full.py  thurstone_mosteller_part.py
paper/: paper.bib  paper.md
tests/: __init__.py  test_batch.py  test_constants.py  test_create_rating.py  test_ladder.py  test_ordinal.py  test_rate.py  test_rating.py  test_team_rating.py
tests/models/: __init__.py  generate.py  test_bradley_terry_full.py  test_bradley_terry_full_series.py  test_bradley_terry_part.py  test_bradley_terry_part_series.py  test_common.py  test_plackett_luce.py  test_plackett_luce_series.py  test_thurston_mosteller_full.py  test_thurston_mosteller_full_series.py  test_thurston_mosteller_part.py  test_thurston_mosteller_part_series.py  test_thurstone_mosteller_full.py  test_thurstone_mosteller_full_series.py  test_thurstone_mosteller_part.py  test_thurstone_mosteller_part_series.py
tests/models/data/: bradleyterryfull.json  bradleyterrypart.json  plackettluce.json  thurstonemostellerfull.json  thurstonemostellerpart.json
tests/models/weng_lin/: __init__.py  test_bradley_terry_full.py  test_bradley_terry_part.py  test_common.py  test_plackett_luce.py  test_thurstone_mosteller_full.py  test_thurstone_mosteller_part.py
tests/predictions/: test_predict_draw.py  test_predict_rank.py  test_predict_win.py
tests/statistics/: test_v.py  test_vt.py  test_w.py  test_wt.py
tests/util/: test_ladder_pairs.py  test_rankings.py  test_score.py  test_team_rating.py  test_unwind.py  test_util_a.py  test_util_c.py  test_util_sum_q.py
(+253 files in other folders)
