[tool.towncrier]
package = "openskill"
package_dir = "openskill"
directory = "changes"
filename = "CHANGELOG.rst"
issue_format = "`#{issue} <https://github.com/vivekjoshy/openskill.py/issues/{issue}>`_"
type = [
    { name = "Breaking Changes",            directory = "breaking",     showcontent = true },
    { name = "Deprecation",                 directory = "deprecation",  showcontent = true },
    { name = "Features",                    directory = "feature",      showcontent = true },
    { name = "Bugfixes",                    directory = "bugfix",       showcontent = true },
    { name = "Documentation Improvements",  directory = "doc",          showcontent = true },
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --ignore=docs/conf.py --ignore=setup.py --ignore=benchmark --ignore=ci --ignore=.eggs --doctest-modules --doctest-glob=/*.py --tb=short"
norecursedirs = [
	".git",
	".tox",
	".env",
	"dist",
	"build",
	"migrations"
]
testpaths = [
    "tests"
]
python_files = [
	"test_*.py",
	"*_test.py",
	"tests.py"
]
doctest_optionflags = "NUMBER"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true

[project]
name = "openskill"
version = "6.0.1"
authors = [
    {name = "Vivek Joshy", email = "vivekjoshy97@gmail.com"},
]
maintainers = [
  {name = "Vivek Joshy", email = "vivekjoshy97@gmail.com"}
]
description = "Multiplayer Rating System. No Friction."
readme = "README.md"
requires-python = "~=3.10"
keywords = ["ranking", "trueskill", "statistics", "rating", "math", "rank"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[project.urls]
Source = "https://github.com/vivekjoshy/openskill.py"
Documentation = "https://openskill.me/en/stable"
Changelog = "https://github.com/vivekjoshy/openskill.py/blob/main/CHANGELOG.rst"
Funding = "https://opencollective.com/openskill"
Tracker = "https://github.com/vivekjoshy/openskill.py/issues"

[tool.uv]
dev-dependencies = [
    "sphinx~=8.1",
    "nbsphinx~=0.9",
    "pygments~=2.18",
    "shibuya~=2024.7",
    "ipykernel~=6.29",
    "matplotlib~=3.9",
    "myst-parser~=4.0",
    "sphinx-intl~=2.2",
    "sphinx-favicon~=1.0",
    "sphinx-docsearch~=0.1",
    "sphinx-copybutton~=0.5",
    "sphinxext-opengraph~=0.9",
    "sphinxcontrib-bibtex~=2.6",
    "sphinx-autodoc-typehints~=2.2",
    "tox~=4.16",
    "mypy~=1.10",
    "pytest~=8.2",
    "coverage~=7.6",
    "pytest-cov~=5.0",
    "twine~=5.1",
    "build~=1.2",
    "isort~=5.13",
    "black[jupyter]~=24.4",
    "codecov~=2.1",
    "towncrier~=23.11",
    "bump-my-version~=0.24.2",
]

[tool.setuptools]
package-dir = {"openskill" = "openskill"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
