[metadata]
name = openskill
version = attr: openskill.__version__
description = A faster, open-license alternative to Microsoft TrueSkill
author = Taven <taven@outlook.in>
author_email = contact@taven.me
license = mit
license_file = LICENSE
url = https://github.com/OpenDebates/openskill.py
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = any
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
keywords =
    ranking
    trueskill
    bayesian
    rating

[options]
packages = find:
python_requires = >=3.10
install_requires =
	scipy

[options.extras_require]
docs =
	Sphinx
	furo
    Pygments
tests =
	pytest
	pytest-cov
release =
    isort
    twine
    codecov
    bump2version
    black
    towncrier
    build
benchmarks =
    jsonlines
    prompt-toolkit
    trueskill
    scikit-learn
    pandas
