[metadata]
name = openskill
version = attr: openskill.__version__
description = A faster, open-license alternative to Microsoft TrueSkill
author = Taven <taven@opendebates.net>
author_email = taven@opendebates.net
license = mit
license_files = LICENSE
url = https://github.com/OpenDebates/openskill.py
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = any
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    ranking
    trueskill
    bayesian
    rating
project_urls =
    Documentation = https://openskill.me/en/stable
    Release notes = https://github.com/OpenDebates/openskill.py/blob/main/CHANGELOG.rst
    Funding = https://github.com/sponsors/OpenDebates
    Source = https://github.com/OpenDebates/openskill.py
    Tracker = https://github.com/OpenDebates/openskill.py/issues

[options]
packages = find:
python_requires = >=3.7
install_requires =
	scipy

[options.extras_require]
docs =
	Sphinx
	furo
    Pygments
    myst-parser
    sphinxext-opengraph
tests =
	pytest
	pytest-cov
release =
    isort
    twine
    codecov
    bump2version
    black
    towncrier
    build
benchmarks =
    jsonlines
    prompt-toolkit
    trueskill
    scikit-learn
    pandas
